<resources>
    <string name="app_name">My Application4</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register">Se Connecter</string>
    <string name="nombre_d_essai">Nombre d\'essai</string>
    <string name="nouvel_utilisateur_s_inscrire">Nouvel utilisateur ? S\'inscrire</string>
    <string name="inscription">Inscription</string>
    <string name="d_ja_inscrit_se_connecter">Déja Inscrit ? Se Connecter</string>
    <string name="email">Email</string>
    <string name="voici_la_deuxieme_activit">Voici la Deuxieme Activité</string>
    <string name="logout">Logout</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="reset_mdp">Reset MDP</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="image_android">Image Android</string>
    <string name="ProfileName">Name :</string>
    <string name="ProfilEmail">Email :</string>
    <string name="ProfileAge">Age :</string>
    <string name="BtnProfileUpdate">Button</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="by_kevin">By Kevin</string>
    <string name="change_password">Change password</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="EditAge">Age</string>
    <string name="EditEmail">Email</string>
    <string name="EditName">Username</string>
    <string name="BtnSavePassword">Update</string>
    <string name="son_1">Son 1</string>
    <string name="son_2">Son 2</string>
    <string name="son_3">Son 3</string>
    <string name="son_4">Son 4</string>
    <string name="son_5">Son 5</string>
    <string name="son_6">Son 6</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="music_player">Music Player</string>
    <string name="kevin_application">Mon Application</string>
    <string name="musique">MUSIQUE</string>
    <string name="news">NEWS</string>
</resources>
