<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/BtnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="534dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/BtnSound1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:onClick="playSound"
        android:text="@string/son_1" />

    <Button
        android:id="@+id/BtnSound2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/BtnSound1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="playSound"
        android:text="@string/son_2" />

    <Button
        android:id="@+id/BtnSound3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:onClick="playSound"
        android:text="@string/son_3" />

    <Button
        android:id="@+id/BtnSound4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"
        android:onClick="playSound"
        android:text="@string/son_4" />

    <Button
        android:id="@+id/BtnSound5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:onClick="playSound"
        android:text="@string/son_5" />

    <Button
        android:id="@+id/BtnSound6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="150dp"
        android:layout_marginRight="50dp"
        android:onClick="playSound"
        android:text="@string/son_6" />

    <Button
        android:id="@+id/BtnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:onClick="play"
        android:text="@string/play" />

    <Button
        android:id="@+id/BtnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:onClick="pause"
        android:text="@string/pause" />

    <Button
        android:id="@+id/BtnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:onClick="stop"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="253dp"
        android:text="@string/music_player"
        android:textSize="25dp" />
</RelativeLayout>