<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <ImageView
        android:id="@+id/IdProfilePic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/profile"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/ProfilName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:text="@string/ProfileName"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/ProfilAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="369dp"
        android:text="@string/ProfileAge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ProfilEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="423dp"
        android:text="@string/ProfilEmail"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BtnProfileUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="481dp"
        android:text="@string/edit"
        android:textSize="20sp" />

    <Button
        android:id="@+id/BtnChangepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="545dp"
        android:text="@string/change_password" />
</RelativeLayout>