<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">

    <EditText
        android:id="@+id/SetUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/BtnRegister"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="244dp"
        android:text="@string/inscription" />

    <TextView
        android:id="@+id/LabelSeconnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:text="@string/d_ja_inscrit_se_connecter"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/LabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/SetUserName"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/labelMDP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/SetUserName"
        android:layout_marginTop="183dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
</RelativeLayout>