<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <ImageView
        android:id="@+id/ImageUpdate"
        android:layout_width="137dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:contentDescription="EditImage"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:hint="@string/EditName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/EditEmail"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/EditAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:hint="@string/EditAge"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/EditSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/sauvegarder" />

</RelativeLayout>